Lagt på class på p tags

--- a/analyse.html
+++ b/analyse.html
@@ -115,6 +115,7 @@
             </section>
             <section>
                 <h2>Sammenligning av analysene</h2>
+                <p class="analyse">Her er en sammenligning av hva de forskjellige programmene reagerte på i koden min. JA betyr at det ble reagert på, NEI betyr at siden ikke reagerte.</p>
                 <table>
                     <tr>
                         <th>ChatGPT</th>
@@ -176,6 +177,7 @@
             <section>
                 <article>
                     <h2>Forbedringer</h2>
+                    <p class="analyse">Her er en liste over forbedringer jeg har gjort på nettsiden.</p>
                     <ul>
                         <li>La på en meta description tag på alle sidene.</li>
                         <li>Retta opp diverse skrivefeil.</li>
@@ -190,64 +192,64 @@
                     <figure>
                         <img src="img/header1.png" alt="Bilde av header-elementet før forbedringer." class="forbedringer">
                         <figcaption>
-                            <p>Bilde av header-elementet før forbedringer.</p>
+                            <p class="analyse">Bilde av header-elementet før forbedringer.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/header2.png" alt="Bilde av header-elementet etter forbedringer." class="forbedringer">
                         <figcaption>
-                            <p>Bilde av header-elementet etter forbedringer.</p>
+                            <p class="analyse">Bilde av header-elementet etter forbedringer.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/velgknapper1.png" alt="Bilde av valg knappene før forbedringer." class="forbedringer">
                         <figcaption>
-                            <p>Bilde av valg knappene før forbedringer.</p>
+                            <p class="analyse">Bilde av valg knappene før forbedringer.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/velgknapper2.png" alt="Bilde av valg knappene etter forbedringer." class="forbedringer">
                         <figcaption>
-                            <p>Bilde av valg knappene etter forbedringer.</p>
+                            <p class="analyse">Bilde av valg knappene etter forbedringer.</p>
                         </figcaption>
                     </figure>
-                    <p>Bildene over viser de synlige forandringene på nettsiden, mens resten av forbedringene er i selve koden. Bildene under viser scoren fra Lighthouse og Webaim etter forbedringene.</p>
+                    <p class="analyse">Bildene over viser de synlige forandringene på nettsiden, mens resten av forbedringene er i selve koden. Bildene under viser scoren fra Lighthouse og Webaim etter forbedringene.</p>
                     <figure>
                         <img src="img/forsidescore2.png" alt="Bildet viser scoren forsiden fikk på SEO analysen andre runde.">
                         <figcaption>
-                            <p>Bildet viser scoren forsiden fikk på SEO analysen andre runde.</p>
+                            <p class="analyse">Bildet viser scoren forsiden fikk på SEO analysen andre runde.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/produktscore2.png" alt="Bildet viser scoren produktsiden fikk på SEO analysen andre runde.">
                         <figcaption>
-                            <p>Bildet viser scoren produktsiden fikk på SEO analysen andre runde.</p>
+                            <p class="analyse">Bildet viser scoren produktsiden fikk på SEO analysen andre runde.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/returscore2.png" alt="Bildet viser scoren retursiden fikk på SEO analysen andre runde.">
                         <figcaption>
-                            <p>Bildet viser scoren retursiden fikk på SEO analysen andre runde.</p>
+                            <p class="analyse">Bildet viser scoren retursiden fikk på SEO analysen andre runde.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/webaimforside2.png" alt="Bildet viser tilbakemeldingen på forsiden fra Webaim, andre runde.">
                         <figcaption>
-                            <p>Bildet viser tilbakemeldingen på forsiden fra Webaim, andre runde.</p>
+                            <p class="analyse">Bildet viser tilbakemeldingen på forsiden fra Webaim, andre runde.</p>
                         </figcaption>
                     </figure>
-                    <p>Forsiden har nå ingen errors fra Webaim. Det er fortsatt noen alerts, men disse er ikke like viktige. Det ene er at jeg har linka til samme sted med flere linker, noe jeg vil at det skal være. Det andre er at den mener "699kr" og "unisex" kan være H-tags i stedet for p, men jeg er litt usikker på dette. Så siden det ikke er error lar jeg det stå for nå.</p>
+                    <p class="analyse">Forsiden har nå ingen errors fra Webaim. Det er fortsatt noen alerts, men disse er ikke like viktige. Det ene er at jeg har linka til samme sted med flere linker, noe jeg vil at det skal være. Det andre er at den mener "699kr" og "unisex" kan være H-tags i stedet for p, men jeg er litt usikker på dette. Så siden det ikke er error lar jeg det stå for nå.</p>
                     <figure>
                         <img src="img/webaimprodukt2.png" alt="Bildet viser tilbakemeldingen på produktsiden fra Webaim, andre runde.">
-                        <p>Bildet viser tilbakemeldingen på produktsiden fra Webaim, andre runde.</p>
+                        <p class="analyse">Bildet viser tilbakemeldingen på produktsiden fra Webaim, andre runde.</p>
                     </figure>
-                    <p>Produktsiden har ingen errors, men får samme alerts som forsiden. Jeg ser at webaim gjerne vil bytte p-tags til H om teksten blir for kort.</p>
+                    <p class="analyse">Produktsiden har ingen errors, men får samme alerts som forsiden. Jeg ser at webaim gjerne vil bytte p-tags til H om teksten blir for kort.</p>
                     <figure>
                         <img src="img/webaimretur2.png" alt="Bildet viser tilbakemeldingen på retursiden fra Webaim, andre runde.">
-                        <p>Bildet viser tilbakemeldingen på retursiden fra Webaim, andre runde.</p>
+                        <p class="analyse">Bildet viser tilbakemeldingen på retursiden fra Webaim, andre runde.</p>
                     </figure>
-                    <p>Retursiden har ingen errors. Kun 2 alerts som handler om at en side er linket til med flere linker.</p>
-                    <p>Generelt er jeg veldig fornøyd med resultatene etter forbedringer. Det er ikke lenger noen "alvorlige" feil og det lille som er igjen av alerts er pirk fra webaim. Det som gjorde at scoren endret seg var at jeg tok gode notater av feilene mine og fiksa det så godt jeg kunne, det var hjelpsomt siden den vanlige html-validatoren ikke sier ifra om de samme feilene.</p>
+                    <p class="analyse">Retursiden har ingen errors. Kun 2 alerts som handler om at en side er linket til med flere linker.</p>
+                    <p class="analyse">Generelt er jeg veldig fornøyd med resultatene etter forbedringer. Det er ikke lenger noen "alvorlige" feil og det lille som er igjen av alerts er pirk fra webaim. Det som gjorde at scoren endret seg var at jeg tok gode notater av feilene mine og fiksa det så godt jeg kunne, det var hjelpsomt siden den vanlige html-validatoren ikke sier ifra om de samme feilene.</p>
                 </article>
             </section>
         </main>
