Skjermleser analyse og skip knapp

--- a/analyse.html
+++ b/analyse.html
@@ -252,6 +252,13 @@
                     <p class="analyse">Generelt er jeg veldig fornøyd med resultatene etter forbedringer. Det er ikke lenger noen "alvorlige" feil og det lille som er igjen av alerts er pirk fra webaim. Det som gjorde at scoren endret seg var at jeg tok gode notater av feilene mine og fiksa det så godt jeg kunne, det var hjelpsomt siden den vanlige html-validatoren ikke sier ifra om de samme feilene.</p>
                 </article>
             </section>
+            <section>
+                <article>
+                    <h2>Skjermleserkompatibilitet</h2>
+                    <p class="analyse">Den første skjermoppleseren jeg brukte var windows sin intergrete skjermoppleser. Det gikk greit, men den hadde noen utfordringer. Den hoppet over å lese at det var en hamburgermeny, men leste innholdet om den var åpen. Det andre er at den ikke automatisk leste p-tagene, den hoppet over innholdet og rett til linkene. I tillegg når den faktisk leste p-tagene så slutta den å lese når linja var over, selv om settningen fortsatte på linja under. Etter å prøvd å lese mer om skjermoppleseren fikk jeg det til å funke bedre. Ved å bruke pil ned tasten i stedet for tabs leser den nå hamburgermenyen, p-tagger og alt-tekst på bildene. Nettsiden er definitivt ikke idiel for bruk av skjermoppleser, men man får med seg det viktigste. Note: Vet ikke om det er koden det er noe galt med eller bruker feil av skjermoppleseren.</p>
+                    <p class="analyse">Den andre skjermleseren jeg prøvde var chorme sin "Chrome Screen Reader exstension". Den fungerte også ganske greit, men her funket ikke pil tastene. Man måtte trykke med musa på de delene man ville ha opplest. Da leste den tekst, knapper og alt-tekst helt fint. </p>
+                </article>
+            </section>
         </main>
         <footer>
             <nav>
