--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <a href="#main" class="skip">Gå til hovedinnholdet</a>
+        <main id="main">
             <h1>Velkommen til skobutikken!</h1>
             <section id="kategori">
                 <a href="produkt.html" class="knapper">Herresko</a>
