--- a/produkt.html
+++ b/produkt.html
@@ -29,7 +29,8 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <a href="#main" class="skip">Gå til hovedinnholdet</a>
+        <main id="main">
             <section id="produkt">
                 <figure>
                     <img src="img/knyte.jpg" alt="bilde av brune tursko">
