--- a/retur.html
+++ b/retur.html
@@ -29,7 +29,8 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <a href="#main" class="skip">Gå til hovedinnholdet</a>
+        <main id="main">
             <article>
                 <h1>Returnering</h1>
                 <h2>Ønsker du å returnere en vare?</h2>
