Klart for trinn 4

--- a/analyse.html
+++ b/analyse.html
@@ -259,6 +259,18 @@
                     <p class="analyse">Den andre skjermleseren jeg prøvde var chorme sin "Chrome Screen Reader exstension". Den fungerte også ganske greit, men her funket ikke pil tastene. Man måtte trykke med musa på de delene man ville ha opplest. Da leste den tekst, knapper og alt-tekst helt fint. </p>
                 </article>
             </section>
+            <section>
+                <article>
+                    <h2>Tastaturnavigasjon</h2>
+                    <p class="analyse">For det aller meste fungerer tastaturnavigajson fint. Knapper og linker fugerer som det skal, og man kan komme seg mellom de forskjellige stedene på siden greit. Det eneste problemet jeg har funnet er at hamburgermenyern ikke responderer når man trykker enter eller space. Jeg brukte tabindex attributtet for at ikonet skulle bli markert når man bruker tabs, men den vil ikke åpne seg. Jeg prøvde å lese og fikse det, men da sluttet hamburgermenyen helt å fungere derfor lot jeg det være.</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h2>ARIA-attributter</h2>
+                    <p>Jeg la til aria-label på alle elementer som ikke hadde tekst, det var i hovedsak ikonene i headeren. Resten av navigasjon og knapper har allerede tydelig tekst og bildene har alt-tekst.</p>
+                </article>
+            </section>
         </main>
         <footer>
             <nav>
