--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><a id="ham" class="fa-solid fa-bars"></a></li>
+                    <li><a tabindex="1" id="ham" aria-label="Åpne drop-down menyen" class="fa-solid fa-bars"></a></li>
                     <li><a id="hjem" aria-label="Hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
-                    <li><a id="logo" href="index.html">Skobutikken</a></li>
+                    <li><a id="logo" aria-label="Hjem" href="index.html">Skobutikken</a></li>
                     <li><a id="handlekurv" aria-label="Handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
                 </ul>
                 <ul class="navbar">
@@ -41,13 +41,12 @@
                 <label for="søk">Søk blant produkter</label>
                 <input class="searchbar" type="text" placeholder="Tursko" id="søk">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-question"></i>
             </section>
             <section>
                 <article>
                     <h2>Dette er høstens bestselgere!</h2>
                     <figure>
-                        <img src="img/knyte.jpg" alt="bilde av brune tursko">
+                        <img src="img/knyte.jpg" alt="Et bilde av brune Jotunheimen tursko.">
                         <figcaption>
                             <p>Bildet er tatt av <a href="https://pixabay.com/no/users/hans-2/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3082">Hans</a> fra <a href="https://pixabay.com/no//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3082">Pixabay</a></p>
                         </figcaption>
