--- a/retur.html
+++ b/retur.html
@@ -13,9 +13,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><a id="ham" class="fa-solid fa-bars"></a></li>
+                    <li><a tabindex="1" id="ham" aria-label="Åpne drop-down menyen." class="fa-solid fa-bars"></a></li>
                     <li><a id="hjem" aria-label="Hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
-                    <li><a id="logo" href="index.html">Skobutikken</a></li>
+                    <li><a id="logo" aria-label="Hjem" href="index.html">Skobutikken</a></li>
                     <li><a id="handlekurv" aria-label="Handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
                 </ul>
                 <ul class="navbar">
@@ -44,25 +44,25 @@
             </article>
             <section>
                 <figure>
-                    <img src="https://placehold.co/400" alt="storyboard til punkt 1">
+                    <img src="https://placehold.co/400" alt="Bilde med storyboard til punkt 1">
                     <figcaption>
                         <p>Bildet fra Placehold.co</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="https://placehold.co/400" alt="storyboard til punkt 2">
+                    <img src="https://placehold.co/400" alt="Bilde med storyboard til punkt 2">
                     <figcaption>
                         <p>Bildet fra Placehold.co</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="https://placehold.co/400" alt="storyboard til punkt 3">
+                    <img src="https://placehold.co/400" alt="Bilde med storyboard til punkt 3">
                     <figcaption>
                         <p>Bildet fra Placehold.co</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="https://placehold.co/400" alt="storyboard til punkt 4">
+                    <img src="https://placehold.co/400" alt="Bilde med storyboard til punkt 4">
                     <figcaption>
                         <p>Bildet fra Placehold.co</p>
                     </figcaption>
