--- a/produkt.html
+++ b/produkt.html
@@ -13,9 +13,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><a id="ham" class="fa-solid fa-bars"></a></li>
+                    <li><a tabindex="1" id="ham" aria-label="Åpne drop-down menyen." class="fa-solid fa-bars"></a></li>
                     <li><a id="hjem" aria-label="Hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
-                    <li><a id="logo" href="index.html">Skobutikken</a></li>
+                    <li><a id="logo" aria-label="Hjem" href="index.html">Skobutikken</a></li>
                     <li><a id="handlekurv" aria-label="Handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
                 </ul>
                 <ul class="navbar">
@@ -29,30 +29,30 @@
                 </ul>
             </nav>
         </header>
-        <a href="#main" class="skip">Gå til hovedinnholdet</a>
-        <main id="main">
+        <a href="#hovedinnholdet" class="skip">Gå til hovedinnholdet</a>
+        <main>
             <section id="produkt">
                 <figure>
-                    <img src="img/knyte.jpg" alt="bilde av brune tursko">
+                    <img src="img/knyte.jpg" alt="Et bilde av brune Jotunheimen tursko.">
                     <figcaption>
                         <p>Bildet tatt av <a href="https://pixabay.com/no/users/hans-2/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3082">Hans</a> fra <a href="https://pixabay.com/no//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3082">Pixabay</a></p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="img/close.jpg" alt="bilde av skoens glidelås og lisser">
+                    <img src="img/close.jpg" alt="Et bilde av skoens glidelås og lisser.">
                     <figcaption>
                         <p>Bildet er tatt av <a href="https://pixabay.com/no/users/couleur-1195798/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1708632">Ilo</a> fra <a href="https://pixabay.com/no//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1708632">Pixabay</a></p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="img/lisser.jpg" alt="nærbilde av lissene">
+                    <img src="img/lisser.jpg" alt="Et nærbilde av skolissene.">
                     <figcaption>
                         <p>Bildet er tatt av <a href="https://pixabay.com/no/users/rupixen-11154019/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4345636">Free stock photos from www.rupixen.com</a> fra <a href="https://pixabay.com/no//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4345636">Pixabay</a></p>
                     </figcaption>
                 </figure>
             </section>
             <section>
-                <h1>Jotunheimen Tursko</h1>
+                <h1 id="hovedinnholdet">Jotunheimen Tursko</h1>
                 <p>Unisex</p>
                 <p>699 kr</p>
             </section>
