Lagt på microdata

--- a/produkt.html
+++ b/produkt.html
@@ -52,9 +52,16 @@
                 </figure>
             </section>
             <section>
-                <h1 id="hovedinnholdet">Jotunheimen Tursko</h1>
+                <h1 id="hovedinnholdet" itemprop="name">Jotunheimen Tursko</h1>
+                <div itemprop="aggregateRating" itemscope itemtype="https://schema.org/AggregateRating">
+                    <meta itemprop="reviewCount" content="3"> 
+                    <meta itemprop="ratingValue" content="4.9">
+                </div>
                 <p>Unisex</p>
-                <p>699 kr</p>
+                <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
+                    <p itemprop="price" content="699"></p>699 kr</p>
+                    <meta itemprop="priceCurrency" content="NOK">
+                </div>
             </section>
             <section>
                 <label for="velg-farge">Velg farge:</label> 
