Mangler bare litt opprydding

--- a/analyse.html
+++ b/analyse.html
@@ -268,7 +268,19 @@
             <section>
                 <article>
                     <h2>ARIA-attributter</h2>
-                    <p>Jeg la til aria-label på alle elementer som ikke hadde tekst, det var i hovedsak ikonene i headeren. Resten av navigasjon og knapper har allerede tydelig tekst og bildene har alt-tekst.</p>
+                    <p class="analyse">Jeg la til aria-label på alle elementer som ikke hadde tekst, det var i hovedsak ikonene i headeren. Resten av navigasjon og knapper har allerede tydelig tekst og bildene har alt-tekst.</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h2>Microdata</h2>
+                    <p class="analyse">Jeg la til microdata på pris og valuta på skoene. Jeg prøvde å legge til på reviews, men fikk det ikke til. Skulle gjerne hatt en bedre gjennomgang av dette og ARIA i forelesning.</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h2>META og SOME</h2>
+                    <p class="analyse">Alle tre sidene har fått egen meta description tag med tilpasset innhold. I tillegg la jeg til noen keywords fra google trends analysen, selv om ikke alle søkemotorer benytter denne taggen lenger. Jeg har også lagt til meta for Facebook og Instagram, det jeg fant var helt likt, men hver side har tilpasset til sitt innhold.</p>
                 </article>
             </section>
         </main>
