--- a/produkt.html
+++ b/produkt.html
@@ -3,10 +3,25 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <meta name="description" content="Skobutikken er en nettbutikk som gjør det enkelt og trygt å handle sko på nett. Se vårt store utvalg av sko til hverdag og fest. God handel.">
+        <meta name="description" content="Jotunheimen Tursko er solide tursko i imitert lær. Skoene er unisex og kommer i fargen brun. Pris 699 NOK.">
+        <meta name="keywords" content="tursko, tursko dame, tursko herre, unisex">
+        <!--FACEBOOK METADATA-->
+        <meta property="og:title" content="Sjekk ut Jotunheimen Tursko!">
+        <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
+        <meta property="og:description" content="Solide og gode tursko for både dame og herre. Pris 699 kr">
+        <meta property="og:image" content="https://pixabay.com/no/photos/slipssko-sn%C3%B8re-sko-sko-s%C3%A5le-3082/">
+        <meta property="og:type" content="website">
+        <!--SLUTT-->
+        <!--INSTAGRAM METADATA-->
+        <meta property="og:title" content="Sjekk ut Jotunheimen Tursko!">
+        <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
+        <meta property="og:description" content="Solide og gode tursko for både dame og herre. Pris 699 kr">
+        <meta property="og:image" content="https://pixabay.com/no/photos/slipssko-sn%C3%B8re-sko-sko-s%C3%A5le-3082/">
+        <meta property="og:type" content="website">
+        <!--SLUTT-->
         <link rel="stylesheet" href="assets/fontawesome-free-6.4.2-web/fontawesome-free-6.4.2-web/css/all.css"> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>Produktside</title>
+        <title>Skobutikken - Jotunheimen Tursko</title>
     </head>
     <body>
         <div id="grid-container">
@@ -52,11 +67,7 @@
                 </figure>
             </section>
             <section>
-                <h1 id="hovedinnholdet" itemprop="name">Jotunheimen Tursko</h1>
-                <div itemprop="aggregateRating" itemscope itemtype="https://schema.org/AggregateRating">
-                    <meta itemprop="reviewCount" content="3"> 
-                    <meta itemprop="ratingValue" content="4.9">
-                </div>
+                <h1 id="hovedinnholdet">Jotunheimen Tursko</h1>
                 <p>Unisex</p>
                 <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
                     <p itemprop="price" content="699"></p>699 kr</p>
