--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <meta name="description" content="Skobutikken er en nettbutikk som gjør det enkelt og trygt å handle sko på nett. Se vårt store utvalg av sko til hverdag og fest. God handel.">
+        <meta name="description" content="Skobutikken er en nettbutikk som gjør det enkelt og trygt å handle sko på nett. Se vårt store utvalg av sko, fra tursko til hverdagssko til festsko. Alt du måtte trenge!">
+        <meta name="keywords" content="sko, tursko, tursko dame, tursko herre, hverdagssko">
+        <!--FACEBOOK METADATA-->
+        <meta property="og:title" content="Sjekk ut Skobutikken!">
+        <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
+        <meta property="og:description" content="Skobutikken er nettbutikken som gjør det enkelt og trygt å handle sko på nett.">
+        <meta property="og:image" content="https://pixabay.com/no/photos/slipssko-sn%C3%B8re-sko-sko-s%C3%A5le-3082/">
+        <meta property="og:type" content="website">
+        <!--SLUTT-->
+        <!--INSTAGRAM METADATA-->
+        <meta property="og:title" content="Sjekk ut Skobutikken!">
+        <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
+        <meta property="og:description" content="Skobutikken er nettbutikken som gjør det enkelt og trygt å handle sko på nett.">
+        <meta property="og:image" content="https://pixabay.com/no/photos/slipssko-sn%C3%B8re-sko-sko-s%C3%A5le-3082/">
+        <meta property="og:type" content="website">
+        <!--SLUTT-->
         <link rel="stylesheet" href="assets/fontawesome-free-6.4.2-web/fontawesome-free-6.4.2-web/css/all.css"> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>Forside</title>
+        <title>Skobutikken startside</title>
     </head>
     <body>
         <div id="grid-container">
