--- a/retur.html
+++ b/retur.html
@@ -3,10 +3,25 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <meta name="description" content="Skobutikken er en nettbutikk som gjør det enkelt og trygt å handle sko på nett. Se vårt store utvalg av sko til hverdag og fest. God handel.">
+        <meta name="description" content="Vi i Skobutikken mener at å returnere en vare skal være enkelt og raskt. Følg innstruksene og returner varen for pengene tilbake.">
+        <meta name="keywords" content="returnering, skobutikken">
+        <!--FACEBOOK METADATA-->
+        <meta property="og:title" content="Enkel og rask returnering!">
+        <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
+        <meta property="og:description" content="Følg våre enkle steg for å få varen returnet og pengene tilbake.">
+        <meta property="og:image" content="https://pixabay.com/no/photos/slipssko-sn%C3%B8re-sko-sko-s%C3%A5le-3082/">
+        <meta property="og:type" content="website">
+        <!--SLUTT-->
+        <!--INSTAGRAM METADATA-->
+        <meta property="og:title" content="Enkel og rask returnering!">
+        <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
+        <meta property="og:description" content="Følg våre enkle steg for å få varen returnet og pengene tilbake.">
+        <meta property="og:image" content="https://pixabay.com/no/photos/slipssko-sn%C3%B8re-sko-sko-s%C3%A5le-3082/">
+        <meta property="og:type" content="website">
+        <!--SLUTT-->
         <link rel="stylesheet" href="assets/fontawesome-free-6.4.2-web/fontawesome-free-6.4.2-web/css/all.css"> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>Returnering</title>
+        <title>Skobutikken - Returnering</title>
     </head>
     <body>
         <div id="grid-container">
