--- a/analyse.html
+++ b/analyse.html
@@ -30,6 +30,7 @@
         </header>
         <main>
             <h1>Analyse</h1>
+            <p>OBS! Oblig 4 ble påstartet før vi fikk tilbake oblig 3, som ikke ble godkjent. Derfor er det ikke flex/grid på denne nettsiden, men den er responsiv.</p>
             <section>
                 <article>
                     <h2>Nøkkelord undersøkelse</h2>
@@ -95,7 +96,7 @@
                     <h2>ChatGPT Analyse</h2>
                     <p class="analyse">Når jeg skulle bruke ChatGPT til å vurdere koden ba jeg den om dette: Kan du vurdere koden ut i fra et SEO og UU perspektiv, og kan du komme med spesifikke løsninger? Deretter la jeg inn koden for hver side og den kom med løsninger til forbedringer. Det var mye likt som gikk igjen på alle sidene så her er et sammendrag av tilbakemeldingene.</p>
                     <h3>Forslag til SEO-forbedringer</h3>
-                    <ul>
+                    <ul class="analyse">
                         <li>Rett opp skrivefeil i meta viewport fra 1,0 til 1.0.</li>
                         <li>Lag en mer spesifikk tittel og inkluder nøkkelord.</li>
                         <li>Lag en mer beskrivende URL, f.eks bytt fra produkt.html til herresko.html.</li>
@@ -104,7 +105,7 @@
                         <li>Rett opp hirarkiet i H-tagene.</li>
                     </ul>
                     <h3>Forslag til UU-forbedringer</h3>
-                    <ul>
+                    <ul class="analyse">
                         <li>Inkluder tastaturnavigasjon i hamburgermenyen.</li>
                         <li>Legg til ARIA-attributter.</li>
                         <li>Sørg for nok tekst/bakgrunnsfarge kontrast.</li>
@@ -178,7 +179,7 @@
                 <article>
                     <h2>Forbedringer</h2>
                     <p class="analyse">Her er en liste over forbedringer jeg har gjort på nettsiden.</p>
-                    <ul>
+                    <ul class="analyse">
                         <li>La på en meta description tag på alle sidene.</li>
                         <li>Retta opp diverse skrivefeil.</li>
                         <li>Fiksa dicernable name alerten i headeren med aria-labels.</li>
@@ -192,61 +193,65 @@
                     <figure>
                         <img src="img/header1.png" alt="Bilde av header-elementet før forbedringer." class="forbedringer">
                         <figcaption>
-                            <p class="analyse">Bilde av header-elementet før forbedringer.</p>
+                            <p>Bilde av header-elementet før forbedringer.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/header2.png" alt="Bilde av header-elementet etter forbedringer." class="forbedringer">
                         <figcaption>
-                            <p class="analyse">Bilde av header-elementet etter forbedringer.</p>
+                            <p>Bilde av header-elementet etter forbedringer.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/velgknapper1.png" alt="Bilde av valg knappene før forbedringer." class="forbedringer">
                         <figcaption>
-                            <p class="analyse">Bilde av valg knappene før forbedringer.</p>
+                            <p>Bilde av valg knappene før forbedringer.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/velgknapper2.png" alt="Bilde av valg knappene etter forbedringer." class="forbedringer">
                         <figcaption>
-                            <p class="analyse">Bilde av valg knappene etter forbedringer.</p>
+                            <p>Bilde av valg knappene etter forbedringer.</p>
                         </figcaption>
                     </figure>
                     <p class="analyse">Bildene over viser de synlige forandringene på nettsiden, mens resten av forbedringene er i selve koden. Bildene under viser scoren fra Lighthouse og Webaim etter forbedringene.</p>
                     <figure>
                         <img src="img/forsidescore2.png" alt="Bildet viser scoren forsiden fikk på SEO analysen andre runde.">
                         <figcaption>
-                            <p class="analyse">Bildet viser scoren forsiden fikk på SEO analysen andre runde.</p>
+                            <p>Bildet viser scoren forsiden fikk på SEO analysen andre runde.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/produktscore2.png" alt="Bildet viser scoren produktsiden fikk på SEO analysen andre runde.">
                         <figcaption>
-                            <p class="analyse">Bildet viser scoren produktsiden fikk på SEO analysen andre runde.</p>
+                            <p>Bildet viser scoren produktsiden fikk på SEO analysen andre runde.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/returscore2.png" alt="Bildet viser scoren retursiden fikk på SEO analysen andre runde.">
                         <figcaption>
-                            <p class="analyse">Bildet viser scoren retursiden fikk på SEO analysen andre runde.</p>
+                            <p>Bildet viser scoren retursiden fikk på SEO analysen andre runde.</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="img/webaimforside2.png" alt="Bildet viser tilbakemeldingen på forsiden fra Webaim, andre runde.">
                         <figcaption>
-                            <p class="analyse">Bildet viser tilbakemeldingen på forsiden fra Webaim, andre runde.</p>
+                            <p>Bildet viser tilbakemeldingen på forsiden fra Webaim, andre runde.</p>
                         </figcaption>
                     </figure>
                     <p class="analyse">Forsiden har nå ingen errors fra Webaim. Det er fortsatt noen alerts, men disse er ikke like viktige. Det ene er at jeg har linka til samme sted med flere linker, noe jeg vil at det skal være. Det andre er at den mener "699kr" og "unisex" kan være H-tags i stedet for p, men jeg er litt usikker på dette. Så siden det ikke er error lar jeg det stå for nå.</p>
                     <figure>
                         <img src="img/webaimprodukt2.png" alt="Bildet viser tilbakemeldingen på produktsiden fra Webaim, andre runde.">
-                        <p class="analyse">Bildet viser tilbakemeldingen på produktsiden fra Webaim, andre runde.</p>
+                        <figcaption>
+                            <p>Bildet viser tilbakemeldingen på produktsiden fra Webaim, andre runde.</p>
+                        </figcaption> 
                     </figure>
                     <p class="analyse">Produktsiden har ingen errors, men får samme alerts som forsiden. Jeg ser at webaim gjerne vil bytte p-tags til H om teksten blir for kort.</p>
                     <figure>
                         <img src="img/webaimretur2.png" alt="Bildet viser tilbakemeldingen på retursiden fra Webaim, andre runde.">
-                        <p class="analyse">Bildet viser tilbakemeldingen på retursiden fra Webaim, andre runde.</p>
+                        <figcaption>
+                            <p>Bildet viser tilbakemeldingen på retursiden fra Webaim, andre runde.</p>
+                        </figcaption>
                     </figure>
                     <p class="analyse">Retursiden har ingen errors. Kun 2 alerts som handler om at en side er linket til med flere linker.</p>
                     <p class="analyse">Generelt er jeg veldig fornøyd med resultatene etter forbedringer. Det er ikke lenger noen "alvorlige" feil og det lille som er igjen av alerts er pirk fra webaim. Det som gjorde at scoren endret seg var at jeg tok gode notater av feilene mine og fiksa det så godt jeg kunne, det var hjelpsomt siden den vanlige html-validatoren ikke sier ifra om de samme feilene.</p>
