Fiksa en error fra w3

--- a/analyse.html
+++ b/analyse.html
@@ -279,7 +279,7 @@
             <section>
                 <article>
                     <h2>Microdata</h2>
-                    <p class="analyse">Jeg la til microdata på pris og valuta på skoene. Jeg prøvde å legge til på reviews, men fikk det ikke til. Skulle gjerne hatt en bedre gjennomgang av dette og ARIA i forelesning.</p>
+                    <p class="analyse">Jeg la til microdata på pris og valuta på skoene. Det kommer opp en alert på denne fordi html validatoren ga error på noe med microdataen min. Derfor prøvde jeg meg fram og den er nå ok der, men gir alert på schema.org. Siden det kun er alert og ikke error lot jeg det være fordi jeg ikke har kunnskap eller tid til å rette på det nå. Jeg prøvde også å legge til microdata på reviews, men fikk det ikke til. Skulle gjerne hatt en bedre gjennomgang av dette og ARIA i forelesning.</p>
                 </article>
             </section>
             <section>
