--- a/produkt.html
+++ b/produkt.html
@@ -69,8 +69,9 @@
             <section>
                 <h1 id="hovedinnholdet">Jotunheimen Tursko</h1>
                 <p>Unisex</p>
-                <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                    <p itemprop="price" content="699"></p>699 kr</p>
+                <div itemscope itemtype="https://schema.org/Offer">
+                    <meta itemprop="offers" content="offer">
+                    <p itemprop="price" content="699"></p><p>699 kr</p>
                     <meta itemprop="priceCurrency" content="NOK">
                 </div>
             </section>
