--- a/produkt.html
+++ b/produkt.html
@@ -5,14 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Jotunheimen Tursko er solide tursko i imitert lær. Skoene er unisex og kommer i fargen brun. Pris 699 NOK.">
         <meta name="keywords" content="tursko, tursko dame, tursko herre, unisex">
-        <!--FACEBOOK METADATA-->
-        <meta property="og:title" content="Sjekk ut Jotunheimen Tursko!">
-        <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
-        <meta property="og:description" content="Solide og gode tursko for både dame og herre. Pris 699 kr">
-        <meta property="og:image" content="https://pixabay.com/no/photos/slipssko-sn%C3%B8re-sko-sko-s%C3%A5le-3082/">
-        <meta property="og:type" content="website">
-        <!--SLUTT-->
-        <!--INSTAGRAM METADATA-->
+        <!--FACEBOOK OG INSTAGRAM METADATA-->
         <meta property="og:title" content="Sjekk ut Jotunheimen Tursko!">
         <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
         <meta property="og:description" content="Solide og gode tursko for både dame og herre. Pris 699 kr">
