--- a/retur.html
+++ b/retur.html
@@ -5,14 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Vi i Skobutikken mener at å returnere en vare skal være enkelt og raskt. Følg innstruksene og returner varen for pengene tilbake.">
         <meta name="keywords" content="returnering, skobutikken">
-        <!--FACEBOOK METADATA-->
-        <meta property="og:title" content="Enkel og rask returnering!">
-        <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
-        <meta property="og:description" content="Følg våre enkle steg for å få varen returnet og pengene tilbake.">
-        <meta property="og:image" content="https://pixabay.com/no/photos/slipssko-sn%C3%B8re-sko-sko-s%C3%A5le-3082/">
-        <meta property="og:type" content="website">
-        <!--SLUTT-->
-        <!--INSTAGRAM METADATA-->
+        <!--FACEBOOK OG INSTAGRAM METADATA-->
         <meta property="og:title" content="Enkel og rask returnering!">
         <meta property="og:url" content="https://itstud.hiof.no/~vildedr/oblig4">
         <meta property="og:description" content="Følg våre enkle steg for å få varen returnet og pengene tilbake.">
